some minor simplifications